--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,6 @@ flutter:
   # Enable generation of localized Strings from arb files.
   generate: true
 
-  assets:
+  # assets:
     # Add assets from the images directory to the application.
-    - assets/images/
+    # - assets/images/
