--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-
   cupertino_icons: ^1.0.3
 
   # Local lidea package, development only
@@ -26,13 +25,12 @@ dependencies:
     #   ref: main
 
   # Custom
-  in_app_purchase: ^1.0.8
-  just_audio: ^0.9.11
+  in_app_purchase: ^1.0.9
+  just_audio: ^0.9.12
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^1.0.0
 
 flutter:
@@ -41,32 +39,28 @@ flutter:
   # Enable generation of localized Strings from arb files.
   generate: true
 
+  # Add assets
   assets:
-    # Add assets from the images directory to the application.
     - assets/env.json
     - assets/album.json
 
+  # Add fonts from package
   fonts:
     - family: Lato
       fonts:
-        - asset: assets/fonts/Lato-Regular.ttf
-        - asset: assets/fonts/Lato-Thin.ttf
-        - asset: assets/fonts/Lato-Light.ttf
-        - asset: assets/fonts/Lato-Bold.ttf
-    - family: Zaideih
+        - asset: packages/lidea/fonts/Lato-Regular.ttf
+        - asset: packages/lidea/fonts/Lato-Thin.ttf
+        - asset: packages/lidea/fonts/Lato-Light.ttf
+        - asset: packages/lidea/fonts/Lato-Bold.ttf
+
+    - family: Lidea
       fonts:
-        - asset: assets/fonts/Zaideih.ttf
-    # - family: Padauk
-      # fonts:
-      #   - asset: assets/fonts/Padauk-Regular.ttf
-      #   - asset: assets/fonts/Padauk-Bold.ttf
-    # - family: Noto Sans Myanmar
-    #   fonts:
-    #     - asset: assets/fonts/NotoSansMyanmar-Regular.ttf
-    #     - asset: assets/fonts/NotoSansMyanmar-Thin.ttf
-    #     - asset: assets/fonts/NotoSansMyanmar-Light.ttf
-    #     - asset: assets/fonts/NotoSansMyanmar-Bold.ttf
+        - asset: packages/lidea/fonts/Lidea.ttf
 
     - family: Mm3Web
       fonts:
-        - asset: assets/fonts/Mm3Web.ttf
+        - asset: packages/lidea/fonts/Mm3Web.ttf
+
+    # - family: Mm3Web
+    #   fonts:
+    #     - asset: assets/fonts/Mm3Web.ttf
