--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ flutter:
   assets:
     - assets/env.json
     - assets/album.json
+    - assets/bible.json
+    - assets/word.db
 
   # Add fonts from package
   fonts:
@@ -60,7 +62,3 @@ flutter:
     - family: Mm3Web
       fonts:
         - asset: packages/lidea/fonts/Mm3Web.ttf
-
-    # - family: Mm3Web
-    #   fonts:
-    #     - asset: assets/fonts/Mm3Web.ttf
