--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,12 @@ dependencies:
 
   # Custom
   in_app_purchase: ^1.0.9
-  just_audio: ^0.9.12
+  just_audio: ^0.9.18
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 flutter:
   uses-material-design: true
@@ -41,10 +41,10 @@ flutter:
 
   # Add assets
   assets:
-    - assets/env.json
-    - assets/album.json
-    - assets/bible.json
-    - assets/word.db
+    # - assets/env.json
+    # - assets/album.json
+    # - assets/bible.json
+    # - assets/word.db
 
   # Add fonts from package
   fonts:
