--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,20 @@
 {
+  "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "editor.renderLineHighlight": "none",
-  "editor.detectIndentation": true,
+  "editor.detectIndentation": false,
   "editor.fontSize": 13,
   "files.exclude": {
-    "index.js": true,
-    "min.js": true,
-    "configuration.js": true,
-    "notation.js": true,
+      "src/**/*.js": true,
+      "src/**/*.css": true
   },
   "editor.tabSize": 2,
-  "[dart]": {
-    "editor.defaultFormatter": "Dart-Code.dart-code",
-    "editor.formatOnSave": false,
-    "editor.formatOnType": true,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#dfdddd",
+    "activityBar.foreground":"#585858",
+    "textLink.foreground":"#ff0000",
+    "activityBar.inactiveForeground":"#aaaaac",
+    "statusBar.background" : "#b6b7b8"
   },
+  "workbench.colorTheme": "Default Light+"
 }
