--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zaideih.app">
+    package="com.fleth.app">
    <application
       android:name="${applicationName}"
-      android:label="MyOrdbok"
+      android:label="Fleth"
       android:icon="@mipmap/icon"
       android:roundIcon="@mipmap/iconrounded"
       android:usesCleartextTraffic="true">
